[refactor][78] User Domain Validation 추가 및 코드 리팩토링